--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,75 @@
-article {
-    margin: 0px 200px 0px 200px;
+:root{
+    --background: #85FFD3;
 }
 header{
     width: auto;
 }
 #header {
+    border: 1px black solid;
     display: flex;
     align-items: center;
-    border: 1px rgb(228, 3, 3) solid;
     padding: 0x 32px 0 32px;
+    height: 10vh;
+
 
 }
 #header input{
     width: 60%;
     height: 30px;
+    border-radius: 20px;
 }
 #header a {
     padding: 0px 0px 0px 24px;
+}
+#menu{
+    width: 30%;
+    border: 1px black solid;
+    height: 5vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-left: 10vh;
+}
+#menu a{
+    text-decoration: none;
+    color: black;
+}
+#banner{
+    display: grid;
+    grid-template-columns: 8fr 19fr;
+}
+#banner h1{
+    text-decoration: none;
+    font-size: 40px;
+}
+#banner div, #banner img{
+    border: 1px black solid;
+}
+#bannerColor{
+    background-color: var(--background);
+}
+#bannerLinkCarta{
+    padding-left: 8vw;
+    display: flex;
+    align-self: center;
+    flex-direction: column;
+}
+#banner img{
+    opacity: 65%;
+    background-color: var(--background);
+}
+.productosInicio{
+}
+.productosAlignInicio{
+    display: flex;
+    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    width: auto;
+}
+.producto{
+    border: 1px black solid;
+}
+.productosInicio img{
+    width: 15vw;    
 }
