--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root{
     --background: #85FFD3;
     --backgroundproduct: #ECEFF1;
+    --backgroundLoginRegister: #29363dcc;
 }
 @font-face {
   font-family: 'Wallie Skinny';
@@ -177,4 +178,36 @@ footer {
 }
 .icono{
     width: 50px !important;
+}
+/*************/
+/****LOGIN****/
+/*************/
+
+#formularioLogin{
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--backgroundLoginRegister);
+}
+#formularioLogin form{
+    width: 100%;
+}
+#form{
+    width: 420px;
+    height: 522px;
+}
+#formularioLogin h1{
+    font-size: 1.5rem;
+    line-height: 32px;
+}
+@media (max-width: 576px) {
+    #form {
+        width: 100%;
+        height: 90%;
+    }
+    #formularioLogin input{
+        width: 90vw;
+    }
+}
+#linkFormulario{
+    width: 100%;
 }
